optimize-cpg-performance-and-verification-safety